--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -318,6 +318,12 @@
             <height>0</height>
            </size>
           </property>
+          <property name="singleStep">
+           <double>0.050000000000000</double>
+          </property>
+          <property name="value">
+           <double>0.100000000000000</double>
+          </property>
          </widget>
         </item>
        </layout>
@@ -354,7 +360,14 @@
          </widget>
         </item>
         <item>
-         <widget class="QDoubleSpinBox" name="SPINBOXKD"/>
+         <widget class="QDoubleSpinBox" name="SPINBOXKD">
+          <property name="singleStep">
+           <double>0.001000000000000</double>
+          </property>
+          <property name="value">
+           <double>0.010000000000000</double>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
